# MagicCarpet1001

./: .gitignore  CMakeLists.txt  README.md  backgrounds.asm  boss_animation_frames.inc  build.bat  build.sh  defines.asm  engine-config.asm  info.lua  macros.asm  main-nosound.asm  main.asm  mapper003.cfg  mc-003.mlb  mc-003.nes  objects.asm  objects.lua  objects_S1.inc  objects_S1_data.inc  objects_S2.inc  objects_S2_data.inc  objects_S3.inc  objects_S3_data.inc  objects_S4.inc  sound-engine.asm  trajectories.inc
assets/: Stage01_A.nam  Stage01_B.nam  Stage01_OBJ.pal  Stage02_A.nam  Stage02_B.nam  Stage03_A.nam  Stage03_A_RLE.att  Stage03_B.nam  Stage03_B_RLE.att  Stage04_A.nam  Stage04_A.pal  Stage04_A_RLE.att  Stage04_B.nam  Stage04_B_RLE.nam  TitleScreen.nam  rle2nam
doc/: ObjectFiles.md
include/: inesheader.inc
rom/: MCRemake.dbg  MMagicCarpet.dbg  MagicCarpet.dbg  MagicCarpet.nes  MagicCarpet1001_NoHeader.nes  MagicCarpet_new.nes
rom-chr/: bank2.chr  bank3.chr
rom-prg/stages/: Ending_RLE.nam  Stage01_A_RLE.nam  Stage02_A_RLE.nam  Stage02_B_RLE.nam  Stage03_A_RLE.nam  Stage03_B_RLE.nam  Stage04_A_RLE.nam
scripts/: info.lua  objects.lua
source/: backgrounds.asm  defines.asm  despawn_objects.inc  engine-config.asm  macros.asm  main.asm  objects.asm  objects_IdentifyMe.inc  objects_S1_data.inc  objects_S3.inc  objects_S3_data.inc  sound-engine.asm
source/config/: defines.asm  engine_config.asm  mapper.asm  mapper003.cfg  mapper003_old.cfg
source/data/: hud_lives.inc
tools/: compare
tools/compare/: CMakeLists.txt  compare  compare.cpp
(+117 files in other folders)
